@@ -30,6 +30,7 @@ Version 1.1.3 to be released
 - Enh #952: Enhanced support for using defaultParams in CUrlManager (Qiang)
 - Enh #1015: Added automatic column initialization when non-active data provider is used for CGridView (Qiang)
 - Enh #1022: Added CMenu::activateItems (Qiang)
+- Enh #1127: Added support to automatically generate maxlength attribute for text/password inputs based on model rules (Qiang)
 - Enh #1158: Added translations in Latvian (lafriks)
 - Enh #1166: Added CActiveRecord::setOldPrimaryKey (Qiang)
 - Enh #1174: AR's count() now generates more reasonable SQL statement when 'group' option is specified (Qiang)
